<resources>

    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_msg_no_data">暂无内容，点击屏幕重试</string>
    <string name="error_view_no_data_enableclick">暂无内容，点击屏幕重试</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error">内容加载失败\n点击屏幕重新加载</string>
    <string name="error_msg_network">网络连接错误</string>
    <string name="error_msg_permission">您没有访问相关内容的权限</string>
    <string name="error_msg_notfound">找不到相关数据</string>
    <string name="error_msg_unique">已存在该字段</string>
    <string name="error_msg_validate">数据验证错误</string>
    <string name="error_msg_server">服务器错误</string>
    <string name="error_view_unknown_error">发生错误，请点击屏幕重试</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="error_msg_parse">数据解析错误</string>

    <string name="loading">正在加载中。。。</string>
    <string name="refresh">刷新</string>
    <string name="copy_url">复制地址</string>
    <string name="startwith_browser">在浏览器中打开</string>

    <string name="msg_download_image">下载图片</string>
    <string name="msg_download_progress">下载进度</string>
    <string name="msg_image_download_path">图片保存在%s</string>
    <string name="msg_download_failure">图片保存失败</string>

    <string name="font">字体</string>
    <string name="logout">退出登陆</string>
    <string name="act_profile_btn_updatepaddwd">修改密码</string>
    <string name="act_profile_tv_touxian">头像</string>
    <string name="act_profile_toolbar_title">个人信息</string>
    <string name="act_auth_passwd_hint">请输入密码</string>
    <string name="act_auth_captcha_hint">获取验证码</string>
    <string name="act_auth_btn_validate_text">验证</string>
    <string name="act_auth_btn_captcha_text">请输入验证码</string>
    <string name="act_auth_tel_hint">手机号</string>
    <string name="act_auth_security_code">请输入验证码</string>
    <string name="common_btn_reg_text">注册</string>
    <string name="common_btn_submit">提交</string>
    <string name="common_btn_login_text">登陆</string>
    <string name="act_profile_label_touxian">头像</string>
    <string name="act_profile_label_nickname">昵称</string>
    <string name="act_profile_label_gender">性别</string>
    <string name="act_profile_label_tel">手机号</string>
    <string name="act_profile_label_wechat">微信</string>
    <string name="act_profile_security_info">验证码隐藏在来电号码%s的后四位，请查询后输入</string>
    <string name="act_profile_securitycode_btn_complete">下一步</string>
    <string name="auth_reg_toolbar_title">新用户注册</string>
    <string name="auth_reg_toolbar_updatepasswd_title">修改密码</string>
    <string name="auth_reg_toolbar_regetpasswd_title">找回密码</string>
    <string name="auth_login_toolbar_title">用户登陆</string>
    <string name="auth_login_forget_passwd">忘记密码？</string>
    <string name="auth_secutirycode_toolbar_title">验证电话号码</string>

</resources>
